Fix alignment in player ready styles and add danger colour

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -5,6 +5,7 @@ $color-light-grey: #a4a4a4;
 $color-white: #eaeaea;
 $color-primary: #ffc490;
 $color-success: #42b883;
+$color-danger: #c03537;
 
 // TYPE FACE VARIABLES //
 $font-primary: Avenir, Helvetica, Arial, sans-serif;
